--- a/apps/NxPlayerBasedFilter/res/values/strings.xml
+++ b/apps/NxPlayerBasedFilter/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="player_displaysetting">Display Setting</string>
     <string name="main_networkstream">Network Stream</string>
     <string name="main_noimage">No Image</string>
+    <string name="main_tvout">TV OUT</string>
+    <string name="main_empty">재생가능한 미디어를 찾을 수 없습니다.</string>
 
 </resources>
